# FaceRecognition

./: LICENSE.md  README.en.md  README.zh.md
depository/config/: graph.config  setup.config
depository/featurelib/: source.md
depository/models/resnet10/: aipp_resnet10.config  omg_resnet10.sh
depository/models/resnet18/: aipp_resnet18.config  omg_resnet18.sh
depository/models/yolov3tiny/: aipp_yolov3tiny.config  omg_yolov3tiny.sh  yolov3tiny_b4.prototxt
src/common/: RawDataBufferHigh.h  engine_tools.h  stream_data.h
src/device/: CMakeLists.txt
src/device/DistributionEngine/: DistributionEngine.cpp  DistributionEngine.h
src/device/FaceDetectionEngine/: FaceDetectionEngine.cpp  FaceDetectionEngine.h  yolo.h
src/device/FaceFeatureEngine/: FaceFeatureEngine.cpp  FaceFeatureEngine.h
src/device/FaceLandmarkEngine/: FaceLandmarkEngine.cpp  FaceLandmarkEngine.h
src/device/SORTEngine/: Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  SORTEngine.cpp  SORTEngine.h
src/device/VdecEngine/: VdecEngine.cpp  VdecEngine.h
src/device/WarpAffineEngine/: WarpAffineEngine.cpp  WarpAffineEngine.h
src/host/: CMakeLists.txt
src/host/cpp/: MergeEngine.cpp  OperateConfig.cpp  StreamDataOutputEngine.cpp  StreamPullerEngine.cpp  facedemo_main.cpp  register.cpp
src/host/inc/: CommandLine.h  MergeEngine.h  OperateConfig.h  StreamDataOutputEngine.h  StreamPullerEngine.h  common.h  register.h
